fixed media query for 'main' background color, tweaked spacing for both charts.

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -7,7 +7,6 @@ header h1 {
 main {
   position: absolute;
   width: 100%;
-  height: 30em;
 }
 main h2 {
   text-align: center;
@@ -22,7 +21,7 @@ main h2 {
   display: inline-block;
   position: absolute;
   left: 27%;
-  margin-top: 30em;
+  margin-top: 32em;
   height: 50em;
   width: 50em;
   overflow: visible;
@@ -40,7 +39,7 @@ main h2 {
   padding: 0.1em;
 }
 .mobile--chart {
-  margin-top: 69em;
+  margin-top: 75em;
 }
 .horizontal .progress-bar {
   float: left;
